Client/server layer.